Fix overflow scroll

--- a/components/Layout/Layout.module.css
+++ b/components/Layout/Layout.module.css
@@ -11,6 +11,7 @@
     left: 0;
     bottom: 0;
     width: 100%;
+    overflow: "hidden";
 
 }
 
